--- a/source/templates/footer.twig
+++ b/source/templates/footer.twig
@@ -2,6 +2,9 @@
   <div class="main-footer__container page__centerer">
     <a class="main-footer__logo" href="index.html" {% if permalink == "index.html" %}aria-current="page"{% endif %}>
       <span class="visually-hidden">Логотип Мишки</span>
+      <svg width="102" height="34">
+        <use xlink:href="#footer"></use>
+      </svg>
     </a>
     <div class="main-footer__social social">
       <ul class="social__list">
