добавляет декор form icon footer

--- a/source/templates/footer.twig
+++ b/source/templates/footer.twig
@@ -3,7 +3,7 @@
     <a class="main-footer__logo" href="index.html" {% if permalink == "index.html" %}aria-current="page"{% endif %}>
       <span class="visually-hidden">Логотип Мишки</span>
       <svg width="102" height="34">
-        <use xlink:href="#footer"></use>
+        <use xlink:href="img/logo.svg#footer"></use>
       </svg>
     </a>
     <div class="main-footer__social social">
