добавляет декор form icon footer

--- a/source/sass/blocks/main-footer.scss
+++ b/source/sass/blocks/main-footer.scss
@@ -28,25 +28,29 @@
   }
 }
 
-.main-footer__logo {
+.main-footer__logo-link {
   display: none;
-
   cursor: pointer;
 
-  &:hover {
-    background: #46c1ae;
-    transition: all 200ms ease-in;
-  }
-
-  &:active {
-    background: rgba(70, 193, 174, 0.3);
-    transition: all 200ms ease-in;
-  }
 
   @media (--not-mobile) {
     display: block;
     height: 34px;
     justify-self: flex-start;
+  }
+}
+
+.main-footer__logo {
+  fill: #000000;
+
+  &:hover {
+    --fill: #46c1ae;
+    transition: all 200ms ease-in;
+  }
+
+  &:active {
+    --fill: rgba(70, 193, 174, 0.3);
+    transition: all 200ms ease-in;
   }
 }
 
