--- a/source/templates/footer.twig
+++ b/source/templates/footer.twig
@@ -1,9 +1,9 @@
 <footer class="main-footer">
   <div class="main-footer__container page__centerer">
-    <a class="main-footer__logo" href="index.html" {% if permalink == "index.html" %}aria-current="page"{% endif %}>
+    <a class="main-footer__logo-link" href="index.html" {% if permalink == "index.html" %}aria-current="page"{% endif %}>
       <span class="visually-hidden">Логотип Мишки</span>
-      <svg width="102" height="34">
-        <use xlink:href="img/logo.svg#footer"></use>
+      <svg class="main-footer__logo" width="102" height="34">
+        <use href="img/logo.svg#footer"></use>
       </svg>
     </a>
     <div class="main-footer__social social">
