--- a/source/sass/blocks/contact-details.scss
+++ b/source/sass/blocks/contact-details.scss
@@ -1,5 +1,5 @@
 .contact-details__container {
-  padding: 50px 0;
+  padding: 0;
 }
 
 .contact-details__list {
@@ -28,8 +28,6 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  padding-right: 8px;
-  padding-left: 17px;
 
 
   &:hover {
@@ -46,9 +44,15 @@
 
 .contact-details__value {
   border: none;
-  padding: 15px 40px 19px 0;
+  padding: 22px 40px 19px 0;
   background-color: inherit;
   flex-grow: 1;
+
+  &::placeholder {
+    font-size: 19px;
+    line-height: 18px;
+    color: rgba(0, 0, 0, 0.3);
+  }
 
   &:focus-visible {
     outline: none;
