--- a/source/sass/blocks/header-form.scss
+++ b/source/sass/blocks/header-form.scss
@@ -1,7 +1,8 @@
 .header-form {
   background: var(--second-color);
-  padding: 73.5px 22px;
+  padding: 70.5px 22px;
   position: relative;
+  letter-spacing: 1px;
 
   @media (--not-mobile) {
     padding-top: 101px;
