--- a/source/sass/blocks/user-form.scss
+++ b/source/sass/blocks/user-form.scss
@@ -20,9 +20,13 @@
 }
 
 .user-form__item {
-  margin-bottom: 22px;
+  margin-bottom: 25px;
   display: flex;
   align-items: center;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
 
   @media (--mobile) {
     flex-direction: column;
