--- a/source/sass/blocks/product-price.scss
+++ b/source/sass/blocks/product-price.scss
@@ -6,6 +6,10 @@
   display: flex;
   justify-content: center;
   margin: 0;
+
+  @media (--desktop) {
+    font-size: 20px;
+  }
 }
 
 .product-price__description {
