--- a/source/sass/blocks/product-specification.scss
+++ b/source/sass/blocks/product-specification.scss
@@ -12,8 +12,8 @@
   grid-column: 1/2;
   border-bottom: 1px solid #ececec;
   margin: 0;
-  padding-top: 13px;
-  padding-bottom: 15px;
+  padding-top: 12px;
+  padding-bottom: 13px;
   position: relative;
   word-wrap: break-word;
 }
@@ -22,9 +22,10 @@
   grid-column: 2/3;
   border-bottom: 1px solid #ececec;
   margin: 0;
-  padding-top: 13px;
-  padding-bottom: 13px;
+  padding-top: 10px;
+  padding-bottom: 10px;
   padding-left: 30px;
   position: relative;
   word-wrap: break-word;
+  letter-spacing: 0.07em;
 }
