--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -33,11 +33,12 @@
   }
 
   @media (--desktop) {
-    grid-column: 2 / 5;
+    grid-column: 2 / 6;
     grid-row: 1 / 2;
     z-index: 2;
-    margin-top: 61px;
+    margin-top: 75px;
     margin-bottom: 35px;
+    letter-spacing: 0.03em;
   }
 }
 
@@ -56,7 +57,7 @@
     grid-column: 1 / 2;
     grid-row: 1 / 2;
     margin: 0 auto;
-    margin-top: 67px;
+    margin-top: 84px;
   }
 }
 
@@ -81,6 +82,7 @@
   @media (--desktop) {
     grid-column: 2 / 4;
     grid-row: 3 / 4;
+    margin-right: 58px;
   }
 }
 
@@ -93,7 +95,11 @@
   }
 
   @media (--desktop) {
-    margin-bottom: 60px;
+    margin-bottom: 47px;
+    margin-right: 55px;
+    letter-spacing: 0.01em;
+    font-size: 17px;
+    line-height: 30px;
   }
 }
 
@@ -107,7 +113,8 @@
   }
 
   @media (--desktop) {
-    margin-bottom: 109px;
+    margin-bottom: 114px;
+    margin-right: 58px;
   }
 }
 
@@ -122,8 +129,6 @@
   @media (--not-mobile) {
     grid-column: 3 / -1;
     grid-row: 2 / 4;
-
-    margin-left: 42px;
   }
 
   @media (--desktop) {
@@ -141,6 +146,7 @@
   margin-bottom: 36px;
 
   @media (--not-mobile) {
-    margin-top: 33px;
+    margin-top: 31px;
+    margin-bottom: 0;
   }
 }
