--- a/source/sass/blocks/user-list.scss
+++ b/source/sass/blocks/user-list.scss
@@ -5,8 +5,8 @@
 
   @media (--not-mobile) {
     position: relative;
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: auto auto;
     align-items: center;
     justify-content: flex-end;
   }
