--- a/source/sass/blocks/address.scss
+++ b/source/sass/blocks/address.scss
@@ -9,6 +9,11 @@
     grid-template-columns: auto 1fr auto 1fr;
     column-gap: 0;
   }
+
+
+  @media (--desktop) {
+    column-gap: 10px;
+  }
 }
 
 .address__email {
@@ -37,6 +42,11 @@
   @media (--not-mobile) {
     font-size: 17px;
     margin-left: 30px;
+  }
+
+  @media (--not-mobile) {
+    font-size: 17px;
+    margin-left: 0;
   }
 
   &:hover {
