--- a/source/templates/_layout.twig
+++ b/source/templates/_layout.twig
@@ -6,6 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>{{ pages[pageId].name }} | Мишка | HTML Academy</title>
   <link rel="stylesheet" href="./css/style.css">
+  <link rel="preload" href="/source/fonts/opensans.woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="/source/fonts/opensans.woff" as="font" crossorigin="anonymous">
+  <link rel="preload" href="/source/fonts/opensansbold.woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="/source/fonts/opensansbold.woff" as="font" crossorigin="anonymous">
   <link rel="icon" href="favicon.ico" sizes="any">
   <link rel="icon" href="favicons/32.svg" type="image/svg+xml">
   <link rel="manifest" href="manifest.webmanifest">
