--- a/source/sass/blocks/basket-button.scss
+++ b/source/sass/blocks/basket-button.scss
@@ -1,15 +1,18 @@
 .basket-button__field {
   padding: 0;
   margin: 0;
+
+  @media (--not-mobile) {
+    padding: 0 80px;
+  }
 }
 
 .basket-button__title {
-  margin-bottom: 19.5px;
+  margin: 0 auto 23px;
   font-size: 17px;
   line-height: 30px;
   font-weight: 400;
   color: rgba(68, 68, 68, 1);
-  text-align: center;
 }
 
 .basket-button__list {
