--- a/source/sass/blocks/card-product.scss
+++ b/source/sass/blocks/card-product.scss
@@ -14,7 +14,7 @@
 .card-product__list {
   margin: 0;
   margin-top: 6px;
-  margin-bottom: 17px;
+  margin-bottom: 16px;
 
   @media (--desktop) {
     flex-grow: 1;
@@ -47,7 +47,7 @@
   margin: 0;
 
   @media (--tablet) {
-    margin-top: 172.5px;
+    margin-top: auto;
   }
 
   @media (--desktop) {
