--- a/source/sass/blocks/modal-form.scss
+++ b/source/sass/blocks/modal-form.scss
@@ -8,8 +8,27 @@
   margin: 0;
   margin-bottom: 14px;
   text-align: center;
+  padding: 0 50px;
+  text-transform: uppercase;
+  letter-spacing: 0.01em;
+
+  @media (--not-mobile) {
+    padding: 0;
+    font-size: 30px;
+    line-height: 57px;
+    margin: 0;
+    margin-bottom: 10px;
+  }
 }
 
 .modal-form__buttons {
   margin-bottom: 30px;
+}
+
+.modal-form__submit {
+  @media (--not-mobile) {
+    margin-right: 80px;
+    margin-left: 80px;
+    width: auto;
+  }
 }
