--- a/source/sass/blocks/price-of-item.scss
+++ b/source/sass/blocks/price-of-item.scss
@@ -11,6 +11,18 @@
 .price-of-item__value {
   padding-top: 22.5px;
   padding-bottom: 26.5px;
+
+  @media (--not-mobile) {
+    font-size: 17px;
+    line-height: 24px;
+    padding-top: 25.5px;
+    padding-bottom: 21.5px;
+  }
+
+  @media (--desktop) {
+    padding-top: 22px;
+    padding-bottom: 20px;
+  }
 }
 
 .price-of-item__button {
