--- a/source/sass/blocks/production-container.scss
+++ b/source/sass/blocks/production-container.scss
@@ -117,8 +117,9 @@
 }
 
 .production-container__button {
-  @media (--mobile) {
+  width: auto;
 
+  @media (--mobile) {
     margin-right: 34px;
     margin-bottom: 33px;
     margin-left: 34px;
