--- a/source/templates/header.twig
+++ b/source/templates/header.twig
@@ -13,7 +13,7 @@
     </button>
     <div class="main-header__nav-container nav-container">
       <nav class="main-nav main-header__nav">
-        <ul class="main-nav__list site-list">
+        <ul class="main-nav__list site-list {% if permalink=="index.html" %}site-list--index{% endif %}">
           <li class="site-list__item">
             <a class="site-list__link" href="catalog.html" {% if permalink=="catalog.html" %}aria-current="page" {%
               endif %}>Каталог товаров</a>
