--- a/source/sass/blocks/address.scss
+++ b/source/sass/blocks/address.scss
@@ -2,11 +2,12 @@
   margin: 0;
   display: grid;
   grid-template-columns: auto 1fr;
-  column-gap: 34px;
-  row-gap: 25px;
+  column-gap: 30px;
+  row-gap: 28px;
 
   @media (--tablet) {
     grid-template-columns: auto 1fr auto 1fr;
+    column-gap: 0;
   }
 }
 
@@ -32,6 +33,11 @@
   line-height: 30px;
   font-weight: 400;
   border-bottom: 1px solid #62d1ba;
+
+  @media (--not-mobile) {
+    font-size: 17px;
+    margin-left: 30px;
+  }
 
   &:hover {
     color: #46c1ae;
@@ -66,6 +72,7 @@
     @media (--tablet) {
       grid-column: 4 / 5;
       grid-row: 1 / 2;
+      margin-left: 24px;
     }
   }
 }
