--- a/source/sass/blocks/advantage.scss
+++ b/source/sass/blocks/advantage.scss
@@ -25,14 +25,21 @@
   flex: auto;
   flex-direction: column;
   align-items: flex-start;
+  letter-spacing: 0.04em;
 
   @media (--mobile) {
+    padding-right: 5px;
+
     &:nth-child(2n+2) {
       order: 1;
     }
   }
 
   @media (--not-mobile) {
+    font-size: 20px;
+    line-height: 22px;
+    margin-bottom: 40px;
+
     &:nth-child(2n+1) {
       padding-right: 90px;
     }
@@ -77,13 +84,8 @@
     transform: translateX(-5px);
 
     @media (--not-mobile) {
-      margin-top: 46px;
-      margin-bottom: 4px;
-    }
-
-    @media (--not-mobile) {
-      margin-top: 44px;
-      margin-bottom: 6px;
+      margin-top: 0;
+      margin-bottom: 10px;
     }
   }
 }
