--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -8,7 +8,7 @@
   text-decoration: none;
   width: fit-content;
   background: var(--main-color);
-  padding: 16px 26px;
+  padding: 14px;
   color: #444444;
   border: 2px solid #444444;
   box-sizing: border-box;
