--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -29,14 +29,14 @@
   @media (--not-mobile) {
     grid-column: 1 / 4;
     grid-row: 1 / 2;
-    margin-bottom: 37.5px;
+    margin-bottom: 35.5px;
   }
 
   @media (--desktop) {
     grid-column: 2 / 6;
     grid-row: 1 / 2;
     z-index: 2;
-    margin-top: 75px;
+    margin-top: 78px;
     margin-bottom: 35px;
     letter-spacing: 0.03em;
   }
@@ -50,6 +50,8 @@
     grid-row: 1 / 2;
     width: 100px;
     margin-left: auto;
+    margin-right: 12px;
+    margin-top: 6px;
     text-align: center;
   }
 
@@ -77,6 +79,7 @@
   @media (--not-mobile) {
     grid-column: 1 / 3;
     grid-row: 3 / 4;
+    margin-right: 40px;
   }
 
   @media (--desktop) {
@@ -88,14 +91,21 @@
 
 .product__description {
   margin: 0;
-  margin-bottom: 15px;
+  margin-bottom: 20px;
+
+  @media (--mobile) {
+    padding-right: 15px;
+  }
 
   @media (--not-mobile) {
-    margin-bottom: 35px;
+    margin-bottom: 40px;
+    font-size: 17px;
+    line-height: 30px;
+    margin-right: 55px;
   }
 
   @media (--desktop) {
-    margin-bottom: 47px;
+    margin-bottom: 50px;
     margin-right: 55px;
     letter-spacing: 0.01em;
     font-size: 17px;
@@ -110,10 +120,11 @@
 
   @media (--not-mobile) {
     margin-bottom: 57px;
+    margin-right: 55px;
   }
 
   @media (--desktop) {
-    margin-bottom: 114px;
+    margin-bottom: 110px;
     margin-right: 58px;
   }
 }
@@ -141,12 +152,18 @@
   text-align: center;
 }
 
+
 .product__button {
-  margin-top: 24.5px;
+  margin-top: 23.5px;
   margin-bottom: 36px;
 
   @media (--not-mobile) {
     margin-top: 31px;
-    margin-bottom: 0;
+    margin-bottom: 10px;
+  }
+
+  @media (--desktop) {
+    margin-top: 32px;
+    margin-bottom: 10px;
   }
 }
