--- a/source/sass/blocks/user-list.scss
+++ b/source/sass/blocks/user-list.scss
@@ -14,8 +14,12 @@
 
 .user-list__item {
   box-sizing: border-box;
-  border-left: 1px solid rgba(0, 0, 0, 0.1);
-  min-height: 88px;
+
+  @media (--desktop) {
+    border-left: 1px solid rgba(0, 0, 0, 0.1);
+    min-height: 88px;
+    box-sizing: border-box;
+  }
 }
 
 .user-list__link {
