--- a/source/sass/blocks/required-note.scss
+++ b/source/sass/blocks/required-note.scss
@@ -4,4 +4,9 @@
   line-height: 16px;
   font-weight: 400;
   color: #444444;
+
+  @media (--not-mobile) {
+    font-size: 17px;
+    line-height: 30px;
+  }
 }
