--- a/source/sass/blocks/user-form.scss
+++ b/source/sass/blocks/user-form.scss
@@ -1,3 +1,10 @@
+.user-form {
+  @media (--not-mobile) {
+    padding-top: 20px;
+    padding-bottom: 18px;
+  }
+}
+
 .user-form__title {
   margin-bottom: 29px;
 
@@ -40,6 +47,14 @@
   box-shadow: inset 0 -2px 0 #000000;
   width: 100%;
 
+  @media (--not-mobile) {
+    &::placeholder {
+      font-size: 19px;
+      line-height: 18px;
+      color: rgba(0, 0, 0, 0.3);
+    }
+  }
+
   &:hover {
     box-shadow: inset 0 -2px 0 #62d1ba;
   }
@@ -56,7 +71,7 @@
   }
 
   @media (--not-mobile) {
-    margin-left: 24px;
+    margin-left: 30px;
     padding-left: 18px;
   }
 }
