--- a/source/sass/blocks/card-product.scss
+++ b/source/sass/blocks/card-product.scss
@@ -12,6 +12,10 @@
 }
 
 .card-product__list {
+  margin: 0;
+  margin-top: 6px;
+  margin-bottom: 17px;
+
   @media (--desktop) {
     flex-grow: 1;
   }
