--- a/source/sass/blocks/site-sublist.scss
+++ b/source/sass/blocks/site-sublist.scss
@@ -21,7 +21,7 @@
       position: absolute;
       left: 0;
       z-index: -1;
-      background-color: #f9f9f9;
+      background-color: var(--second-color);
       border-top: 1px solid rgba(0, 0, 0, 0.1);
     }
 
@@ -33,7 +33,7 @@
       position: absolute;
       right: 0;
       z-index: -1;
-      background-color: #f9f9f9;
+      background-color: var(--second-color);
       border-top: 1px solid rgba(0, 0, 0, 0.1);
     }
   }
