--- a/source/templates/header.twig
+++ b/source/templates/header.twig
@@ -23,6 +23,8 @@
               %}>Вязание на заказ</a>
           </li>
         </ul>
+      </nav>
+      <nav class="main-header__sub-nav">
         <ul class="main-nav__sublist site-sublist">
           <li class="site-sublist__item">
             <a class="site-sublist__link" href="#">Новые поступления</a>
@@ -44,7 +46,6 @@
         </ul>
       </nav>
     </div>
-
     <p class="main-header__description">Бесплатная доставка по России</p>
   </header>
 </div>
