--- a/source/sass/blocks/products.scss
+++ b/source/sass/blocks/products.scss
@@ -1,7 +1,7 @@
 .products {
   position: relative;
   background-image: url("../../img/background-featured-mobile@1x.jpg");
-  background-color: #f9f9f9;
+  background-color: #fafafa;
   background-repeat: no-repeat;
   background-size: contain;
   background-position: top;
