--- a/source/sass/blocks/site-sublist.scss
+++ b/source/sass/blocks/site-sublist.scss
@@ -13,28 +13,18 @@
     margin: 0;
     height: auto;
 
-    &::after {
-      content: "";
-      display: block;
-      width: 100vw;
-      height: 100%;
-      position: absolute;
-      left: 0;
-      z-index: -1;
-      background-color: var(--second-color);
-      border-top: 1px solid rgba(0, 0, 0, 0.1);
-    }
-
     &::before {
       content: "";
       display: block;
       width: 100vw;
-      height: 100%;
+      top: 0;
+      bottom: 0;
       position: absolute;
       right: 0;
       z-index: -1;
-      background-color: var(--second-color);
-      border-top: 1px solid rgba(0, 0, 0, 0.1);
+      background-color: var(--bg-index, var(--second-color));
+      border-top: 1px solid #f1f1f1;
+      box-shadow: 100vw 0 0 0 var(--bg-index, var(--second-color));
     }
   }
 }
