--- a/source/templates/header.twig
+++ b/source/templates/header.twig
@@ -1,5 +1,5 @@
 <div class="main-header__wrapper">
-  <header class="main-header main-header--nojs page__centerer page__centerer--mobile_off">
+  <header class="main-header main-header--nojs page__centerer page__centerer--mobile_off {% if permalink=="index.html" %}main-header--index{% endif %}">
     <a class="header-logo main-header__logo" href="index.html" {% if permalink=="index.html" %}aria-current="page" {%
       endif %}>
       <picture>
@@ -13,7 +13,7 @@
     </button>
     <div class="main-header__nav-container nav-container">
       <nav class="main-nav main-header__nav">
-        <ul class="main-nav__list site-list {% if permalink=="index.html" %}site-list--index{% endif %}">
+        <ul class="main-nav__list site-list">
           <li class="site-list__item">
             <a class="site-list__link" href="catalog.html" {% if permalink=="catalog.html" %}aria-current="page" {%
               endif %}>Каталог товаров</a>
