--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -39,13 +39,13 @@
     margin-bottom: 41px;
     margin-left: 50px;
     position: relative;
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     flex-grow: 1;
     justify-content: space-between;
     align-items: flex-end;
     box-sizing: border-box;
-    width: 100%;
-
+    width: auto;
 
     &::after {
       content: "";
