--- a/source/sass/blocks/user-list.scss
+++ b/source/sass/blocks/user-list.scss
@@ -15,7 +15,7 @@
 .user-list__item {
   box-sizing: border-box;
 
-  @media (--desktop) {
+  @media (--not-mobile) {
     border-left: 1px solid rgba(0, 0, 0, 0.1);
     min-height: 88px;
     box-sizing: border-box;
