--- a/source/sass/blocks/site-sublist.scss
+++ b/source/sass/blocks/site-sublist.scss
@@ -26,6 +26,17 @@
       border-top: 1px solid #f1f1f1;
       box-shadow: 100vw 0 0 0 var(--bg-index, var(--second-color));
     }
+
+    &::after {
+      content: "";
+      display: block;
+      width: 100vw;
+      height: 1px;
+      top: 0;
+      position: absolute;
+      z-index: -1;
+      background-color: #f1f1f1;
+    }
   }
 }
 
