--- a/source/sass/blocks/site-sublist.scss
+++ b/source/sass/blocks/site-sublist.scss
@@ -15,27 +15,28 @@
 
     &::before {
       content: "";
-      display: block;
-      width: 100vw;
+      position: absolute;
+      z-index: -1;
       top: 0;
       bottom: 0;
-      position: absolute;
       right: 0;
-      z-index: -1;
+      display: block;
+      width: 100vw;
       background-color: var(--bg-index, var(--second-color));
-      border-top: 1px solid #f1f1f1;
       box-shadow: 100vw 0 0 0 var(--bg-index, var(--second-color));
     }
 
     &::after {
       content: "";
+      position: absolute;
+      z-index: -1;
+      top: 0;
+      right: 0;
       display: block;
       width: 100vw;
       height: 1px;
-      top: 0;
-      position: absolute;
-      z-index: -1;
       background-color: #f1f1f1;
+      box-shadow: 100vw 0 0 0 #f1f1f1;
     }
   }
 }
