--- a/source/templates/header.twig
+++ b/source/templates/header.twig
@@ -1,5 +1,5 @@
-<div class="main-header__wrapper">
-  <header class="main-header main-header--nojs page__centerer page__centerer--mobile_off {% if permalink=="index.html" %}main-header--index{% endif %}">
+<div class="main-header">
+  <header class="main-header__wrapper main-header__wrapper--nojs page__centerer page__centerer--mobile_off {% if permalink=="index.html" %}main-header__wrapper--index{% endif %}">
     <a class="header-logo main-header__logo" href="index.html" {% if permalink=="index.html" %}aria-current="page" {%
       endif %}>
       <picture>
@@ -25,7 +25,7 @@
         </ul>
       </nav>
       <nav class="main-header__sub-nav">
-        <ul class="main-nav__sublist site-sublist">
+        <ul class="main-header__sublist site-sublist">
           <li class="site-sublist__item">
             <a class="site-sublist__link" href="#">Новые поступления</a>
           </li>
