--- a/source/sass/blocks/address.scss
+++ b/source/sass/blocks/address.scss
@@ -12,13 +12,17 @@
 
 
   @media (--desktop) {
-    column-gap: 10px;
+    column-gap: 20px;
   }
 }
 
 .address__email {
   grid-column: 1 / 2;
   grid-row: 1 / 2;
+
+  @media (--desktop) {
+    margin-left: -15px;
+  }
 }
 
 .address__title {
@@ -28,6 +32,10 @@
   @media (--tablet) {
     grid-column: 3 / 4;
     grid-row: 1 / 2;
+  }
+
+  @media (--desktop) {
+    margin-left: -15px;
   }
 }
 
@@ -44,7 +52,7 @@
     margin-left: 30px;
   }
 
-  @media (--not-mobile) {
+  @media (--desktop) {
     font-size: 17px;
     margin-left: 0;
   }
