--- a/source/templates/modal.twig
+++ b/source/templates/modal.twig
@@ -1,5 +1,5 @@
-<div class="main-modal__container main-modal__container--close">
-  <div class="main-modal">
+<div class="main-modal main-modal--close">
+  <div class="main-modal__container">
     <div class="main-modal__centerer">
       <form class="main-modal__form modal-form" action="https://echo.htmlacademy.ru/" method="post">
         <h2 class="modal-form__title heading heading--level_2">Добавить в корзину</h2>
